<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.jiayusoft.mobile.shengli.bingan.login.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_et_username"
            style="@style/one_line_material"

            android:hint="@string/prompt_account"
            android:maxLines="1"
            android:singleLine="true"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_et_password"
            style="@style/one_line_material"

            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/suoshujigou"
            android:hint="@string/search_suoshujigou"
            android:editable="false"
            android:focusable="false"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:text="@string/login_savepassword"
                android:id="@+id/login_cb_save_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:textSize="20sp"/>

            <CheckBox
                android:text="@string/login_autologin"
                android:id="@+id/login_cb_auto_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:textSize="20sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/login_btn_sign"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>



