<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jiayusoft.mobile.shengli.bingan.search.SearchActivity">
    <LinearLayout
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/binganhao"
            android:hint="@string/search_binganhao"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/shenfenzheng"
            android:hint="@string/search_shenfenzheng"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"
            app:singleLineEllipsis="true"  />
        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/xingming"
            android:hint="@string/search_xingming"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"
            app:singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/chuyuanriqi"
            android:hint="@string/search_chuyuanriqi"
            android:editable="false"
            android:focusable="false"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"
            app:singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/suoshujigou"
            android:hint="@string/search_suoshujigou"
            android:visibility="gone"
            android:editable="false"
            android:focusable="false"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/one_line_material"
            android:id="@+id/chuyuankeshi"
            android:hint="@string/search_chuyuankeshi"
            android:visibility="gone"
            android:editable="false"
            android:focusable="false"
            app:baseColor="@color/material_base_color"
            app:primaryColor="@color/material_primary_color"
            app:floatingLabel="highlight"/>
    </LinearLayout>
</ScrollView>